Fixed some issues with hero section's mobile alignments

--- a/Landing/src/components/Logo/Logo.css
+++ b/Landing/src/components/Logo/Logo.css
@@ -5,7 +5,7 @@
         margin: 0;
         padding: 0;
         align-items: center;
-        justify-content: center;
+        justify-content: left;
     }
     .logo__icon {
         width: 25%;
