--- a/Landing/src/sections/Contacts/Contacts.css
+++ b/Landing/src/sections/Contacts/Contacts.css
@@ -129,6 +129,7 @@
       width: 20%;
       position: relative;
       right: 5vw;
+      margin-bottom: 2vh;
   }
    #contact-form {
       width: 80%;
