--- a/Landing/src/sections/Experiences/Experiences.css
+++ b/Landing/src/sections/Experiences/Experiences.css
@@ -90,6 +90,7 @@
         width: 20%;
         position: relative;
         right: 5vw;
+        margin-bottom: 2vh;
     }
     .experiences__lower-side {
         padding-top: 10vh;
