--- a/Landing/src/sections/Hero/Hero.css
+++ b/Landing/src/sections/Hero/Hero.css
@@ -2,13 +2,12 @@
     display: flex;
     width: 80vw;
     height: 100vh;
-    object-fit: contain;
   }
   
   .hero__right-side {
     width: 70%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     align-self: baseline;
     object-position: bottom;
     margin: auto;
@@ -18,7 +17,8 @@
     width: 100%;
     height: 70%;
     display: flex;
-    margin: auto;
+    margin: 0;
+    align-self: center;
     flex-direction: column;
   }
   
@@ -28,7 +28,7 @@
       flex-direction: column;
     }
     .hero__left-side {
-      width: 100%;
+      width: 80%;
     }
     .hero__right-side {
       align-self: center;
