--- a/Landing/src/sections/Projects/Projects.css
+++ b/Landing/src/sections/Projects/Projects.css
@@ -118,6 +118,7 @@
         width: 20%;
         position: relative;
         right: 5vw;
+        margin-bottom: 2vh;
     }
     .projects__lower-side {
         padding-top: 5vh;
