--- a/Landing/src/sections/Sauce/Sauce.css
+++ b/Landing/src/sections/Sauce/Sauce.css
@@ -41,6 +41,7 @@
         width: 20%;
         position: relative;
         right: 5vw;
+        margin-bottom: 2vh;
      }
     .sauce__image {
         flex-direction: row;
