--- a/Landing/src/sections/SubHero/SubHero.css
+++ b/Landing/src/sections/SubHero/SubHero.css
@@ -13,7 +13,6 @@
     width: 50%;
     text-align: left;
     height: auto;
-    background-color: rebeccapurple;
     padding: 0 5%;
 }
 .subhero__description > h2 {
